@@ -1,7 +1,7 @@
 Package: RcppExamples
 Title: Examples using 'Rcpp' to Interface R and C++ 
-Version: 0.1.8
-Date: 2016-11-24
+Version: 0.1.8.1
+Date: 2017-01-02
 Author: Dirk Eddelbuettel and Romain Francois
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Description: Examples for Seamless R and C++ integration
