@@ -1,6 +1,6 @@
 ## RcppDataFrame.R: DataFrame example
 ##
-## Copyright (C) 2011 - 2016  Dirk Eddelbuettel and Romain Francois
+## Copyright (C) 2011 - 2017  Dirk Eddelbuettel and Romain Francois
 ##
 ## This file is part of RcppExamples.
 ##
@@ -32,7 +32,7 @@ RcppDataFrame <- function() {
     val <- DataFrameExample(D)
     
     cat("\nAfter call, original and new data frames:\n")
-    # print(val)
+    print(val)
 
-    val
+    invisible(val)
 }
